Nais delegation scope (#118)
* Use nais delegation scope

--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -11,6 +11,13 @@ spec:
   maskinporten:
     enabled: true
     scopes:
+      exposes:
+        - accessibleForAll: true
+          delegationSource: altinn
+          enabled: true
+          product: oppfolgingsplan
+          separator: "/"
+          name: lps.write
       consumes:
         - name: "nav:oppfolgingsplan/lps.write"
   liveness:
