--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -44,6 +44,20 @@ paths:
             'application/json':
               schema:
                 $ref: "#/components/schemas/FollowUpPlanResponse"
+        "400":
+          description: "Bad Request"
+          content:
+            'text/plain':
+              schema:
+                type: "string"
+                example: "Invalid request. Error message: <Some error message>, Error cause: <Some cause>"
+        "500":
+          description: "Internal Server Error"
+          content:
+            'text/plain':
+              schema:
+                type: "string"
+                example: "Failed to retrieve follow-up plan: <Some error message>"
   /api/v1/followupplan/{uuid}/sendingstatus:
     get:
       description: "Gets the sending status to NAV and general practitioner by follow up plan id"
@@ -71,6 +85,13 @@ paths:
               schema:
                 type: "string"
                 example: "Invalid request. Error message: <Some error message>, Error cause: <Some cause>"
+        "404":
+          description: "NotFound"
+          content:
+            'text/plain':
+              schema:
+                type: "string"
+                example: "The follow-up plan with a given uuid was not found"
         "500":
           description: "Internal Server Error"
           content:
@@ -78,6 +99,7 @@ paths:
               schema:
                 type: "string"
                 example: "Failed to retrieve follow-up plan: <Some error message>"
+
 components:
   securitySchemes:
     bearerAuth:
