--- a/.github/workflows/deploy-lps-topic.yaml
+++ b/.github/workflows/deploy-lps-topic.yaml
@@ -6,7 +6,7 @@ on:
       - .github/workflows/topic.yaml
 jobs:
   deploy-topic-to-dev:
-    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/topic-') || github.ref == 'refs/heads/validation-emp-ident-number'
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/topic-')
     name: Deploy topic to dev
     permissions:
       id-token: write
