--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -693,9 +693,7 @@ style:
     maxEscapedCharacterCount: 2
     ignoredCharacters: []
   ThrowsCount:
-    active: true
-    max: 2
-    excludeGuardClauses: false
+    active: false
   TrailingWhitespace:
     active: false
   TrimMultilineRawString:
