--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -66,6 +66,10 @@ spec:
   prometheus:
     enabled: true
     path: /prometheus
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   accessPolicy:
     inbound:
       rules:
