--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -67,6 +67,10 @@ spec:
   prometheus:
     enabled: true
     path: /prometheus
+  observability:
+    autoInstrumentation:
+      enabled: true
+      runtime: java
   accessPolicy:
     inbound:
       rules:
