--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -119,9 +119,9 @@ spec:
     - name: ISDIALOGMELDING_CLIENT_ID
       value: dev-gcp.teamsykefravr.isdialogmelding
     - name: DOKARKIV_URL
-      value: https://dokarkiv.dev-fss-pub.nais.io
+      value: https://dokarkiv-q2.dev-fss-pub.nais.io
     - name: DOKARKIV_SCOPE
-      value: dev-fss.teamdokumenthandtering.dokarkiv-q1
+      value: dev-fss.teamdokumenthandtering.dokarkiv
     - name: ISTILGANGSKONTROLL_URL
       value: http://istilgangskontroll.teamsykefravr
     - name: ISTILGANGSKONTROLL_CLIENT_ID
