--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -82,6 +82,7 @@ spec:
         - host: syfooppdfgen.intern.nav.no
         - host: dokarkiv.prod-fss-pub.nais.io
         - host: ereg-services.prod-fss-pub.nais.io
+        - host: aareg-services.prod-fss-pub.nais.io
       rules:
         - application: digdir-krr-proxy
           namespace: team-rocket
@@ -145,3 +146,7 @@ spec:
       value: https://ereg-services.prod-fss-pub.nais.io
     - name: EREG_SCOPE
       value: prod-fss.arbeidsforhold.ereg-services
+    - name: AAREG_URL
+      value: https://aareg-services.prod-fss-pub.nais.io
+    - name: AAREG_SCOPE
+      value: prod-fss.arbeidsforhold.aareg-services-nais
