--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -148,4 +148,4 @@ spec:
     - name: AAREG_URL
       value: https://aareg-services-q2.dev-fss-pub.nais.io
     - name: AAREG_SCOPE
-      value: dev-fss.arbeidsforhold.aareg-services-nais-q2
+      value: dev-fss.arbeidsforhold.aareg-services-nais
