--- a/src/main/resources/openapi/documentation.yaml
+++ b/src/main/resources/openapi/documentation.yaml
@@ -43,13 +43,13 @@ paths:
               schema:
                 $ref: '#/components/schemas/AuthenticationError'
         '403':
-          description: No active, sent sykmelding, or no active arbeidsforhold found.
+          description: No active, sent sykmelding, or no active employment relationship found.
           content:
             application/json:
               schema:
                 oneOf:
                   - $ref: '#/components/schemas/NoActiveSentSykmeldingError'
-                  - $ref: '#/components/schemas/NoActiveArbeidsforholdError'
+                  - $ref: '#/components/schemas/NoActiveEmploymentError'
         '404':
           description: The GP or Employee was not found. Please check the error type for details.
           content:
@@ -309,7 +309,7 @@ components:
           description: Forbidden
         type: NO_ACTIVE_SENT_SYKMELDING
         message: No active sykmelding sent to employer
-    NoActiveArbeidsforholdError:
+    NoActiveEmploymentError:
       type: object
       properties:
         status:
@@ -325,7 +325,7 @@ components:
           value: 403
           description: Forbidden
         type: NO_ACTIVE_ARBEIDSFORHOLD
-        message: No active arbeidsforhold found for given orgnumber
+        message: No active employment relationship found for given orgnumber
     GeneralPractitionerNotFoundError:
       type: object
       properties:
