--- a/config/detekt/detekt.yml
+++ b/config/detekt/detekt.yml
@@ -779,6 +779,4 @@ style:
     active: true
     ignoreLateinitVar: false
   WildcardImport:
-    active: false
-    excludeImports:
-      - 'java.util.*'
+    active: true
