--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -82,6 +82,7 @@ spec:
         - host: syfooppdfgen.intern.dev.nav.no
         - host: dokarkiv.dev-fss-pub.nais.io
         - host: ereg-services-q1.dev-fss-pub.nais.io
+        - host: aareg-services-q2.dev-fss-pub.nais.io
       rules:
         - application: digdir-krr-proxy
           namespace: team-rocket
@@ -144,3 +145,7 @@ spec:
       value: https://ereg-services-q1.dev-fss-pub.nais.io
     - name: EREG_SCOPE
       value: dev-fss.arbeidsforhold.ereg-services-q1
+    - name: AAREG_URL
+      value: https://aareg-services-q2.dev-fss-pub.nais.io
+    - name: AAREG_SCOPE
+      value: dev-fss.arbeidsforhold.aareg-services-nais
