Increase MaxAge for maskinporten token in Dev.

--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -18,6 +18,7 @@ spec:
           product: oppfolgingsplan
           separator: "/"
           name: lps.write
+          atMaxAge: 18000
       consumes:
         - name: "nav:oppfolgingsplan/lps.write"
   liveness:
