Add grafana logging

--- a/nais/nais-prod.yaml
+++ b/nais/nais-prod.yaml
@@ -68,6 +68,10 @@ spec:
     enabled: true
     path: /prometheus
   observability:
+    logging:
+      destinations:
+        - id: elastic
+        - id: loki
     autoInstrumentation:
       enabled: true
       runtime: java
