--- a/nais/topics/lps-topic.yaml
+++ b/nais/topics/lps-topic.yaml
@@ -21,4 +21,7 @@ spec:
     - team: teamsykefravr
       application: ispersonoppgave
       access: read
+    - team: disykefravar
+      application: dvh-sykefravar-airflow-kafka
+      access: read
 
