--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -1,10 +1,10 @@
-name: Build & Deploy
 on:
   push:
     branches:
       - main
   pull_request:
-    types: [ ready_for_review ]
+    branches:
+      - main
   workflow_dispatch:
 jobs:
   jar-app:
