--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -10,8 +10,7 @@ on:
   workflow_dispatch:
 jobs:
   jar-app:
-    if: github.event.pull_request.draft == false
-    uses: navikt/teamesyfo-github-actions-workflows/.github/workflows/jar-app.yaml@main
+    uses: navikt/teamesyfo-github-actions-workflows/.github/workflows/jar-app.yaml@ignore-pr-drafts
     permissions:
       actions: read
       contents: write
