Disable diskAutoresize to see if that triggers size change

--- a/nais/nais-dev.yaml
+++ b/nais/nais-dev.yaml
@@ -50,7 +50,7 @@ spec:
         databases:
           - envVarPrefix: GCP_DB
             name: lps-db
-        diskAutoresize: true
+        diskAutoresize: false
         diskSize: 12
         diskType: SSD
         highAvailability: false
