Replace detekt with ktlint

--- a/.mise.toml
+++ b/.mise.toml
@@ -18,6 +18,23 @@ docker-compose \
   down
 '''
 
+[tasks.docker-build]
+description = "Build shadowJar and build docker image with gradle"
+run =  '''
+  ./gradlew shadowJar -x test
+  docker build -t esyfo/lps-oppfolginsplan-mottak:local .
+'''
+
+[tasks.docker-run-local-image]
+description = "Run build with gradle"
+run =  '''
+   docker run \
+    --network lps-oppfolgingsplan-mottak_default \
+    -e AUTH_SERVER=authserver:6969 \
+    -e DB_SERVER=db:5432 \
+    esyfo/lps-oppfolginsplan-mottak:local
+'''
+
 [tasks.build]
 description = "Run build with gradle"
 run = './gradlew build'
